# InstellaVL

./: .dockerignore  .env  .gitignore  .mnenv  Dockerfile  LICENSE  NOTICE  README.md  inference_requirements.txt  pyproject.toml  requirements.txt
assets/patches/: encodings.py  instellavl.py  reader.py  stream.py
blog/: blog-final.md
configs/data_configs/: offline_instruction_tuning.yaml  offline_pretraining.yaml  offline_s3_instruction_tuning.yaml  offline_s3_pretraining.yaml  offline_s3_warmup.yaml  offline_warmup.yaml  online_instruction_tuning.yaml  online_pretraining.yaml  online_warmup.yaml
configs/zero_configs/: zero3-old.json  zero3.json  zero3_offload.json  zero3pp.json
docs/: additional_setup.md  model_cards.md  training_readme.md
instellavl/: __init__.py  conversation.py  mm_utils.py  utils.py
instellavl/model/: __init__.py  builder.py  instellavl_arch.py
instellavl/model/language_model/: instellavl.py
instellavl/model/multimodal_encoder/: builder.py  clip_encoder.py  internvit_encoder.py  siglip_encoder.py
instellavl/model/multimodal_projector/: builder.py  pooler_projector.py
instellavl/model/multimodal_resampler/: qformer.py  spatial_pool.py
instellavl/serve/: cli.py
instellavl/train/: instellavl_trainer.py  s3checkpoints.py  train.py
playground/support/: pack_mosaicml.py
playground/support/ArT/: process_json.py
scripts/1B_release/: instruction_tuning.sh  mlp_warmup.sh  pretraining.sh  sbatch_instellavl_instruction_tuning.sh  sbatch_instellavl_mlp_warmup.sh  sbatch_instellavl_pretraining.sh
(+87 files in other folders)
